overlays/forgejo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forgejo-deploy
  labels:
    app: forgejo
spec:
  selector:
    matchLabels:
      app: forgejo
  replicas: 1
  template:
    metadata:
      labels:
        app: forgejo
    spec:
      containers:
        - name: forgejo-pod
          image: codeberg.org/forgejo/forgejo:16.0.5
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: http
            - containerPort: 22
              name: ssh
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: forgejo-data
      restartPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forgejo-runner
  labels: { app: forgejo-runner, role: forgejo-runner }
spec:
  replicas: 1
  selector:
    matchLabels: { app: forgejo-runner }
  template:
    metadata:
      labels: { app: forgejo-runner, role: forgejo-runner }
    spec:
      nodeSelector:
        kubernetes.io/hostname: eva02
      securityContext:
        runAsUser: 0
      containers:
        - name: runner
          image: data.forgejo.org/forgejo/runner:13
          command: ["forgejo-runner", "daemon", "--config", "/config/config.yaml"]
          volumeMounts:
            - { name: config, mountPath: /config }
            - { name: data, mountPath: /data }
            - { name: docker-sock, mountPath: /var/run/docker.sock }
          resources:
            requests: { cpu: "100m", memory: 128Mi }
            limits: { memory: 512Mi }
      volumes:
        - { name: config, secret: { secretName: forgejo-runner-secrets }}
        - { name: data, emptyDir: {} }
        - { name: docker-sock, hostPath: { path: /var/run/docker.sock , type: Socket }}
